--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "babel-preset-env": "^1.7.0",
     "gh-pages": "^3.2.1"
   },
-  "homepage": "https://giuseppe-france.fr"
+  "homepage": "https://thoiirven.github.io/Giuseppe/"
 }
